# matrix-coro

./: .clangd  .gitignore  CMakeLists.txt  README.md  links.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  main.cpp
include/: json.hpp  matrix_coro.hpp  utils.hpp
src/: matrix_coro.cpp
tests/: CMakeLists.txt  test.cpp
